[project]
name = "mcp-gateway"
version = "0.1.0"
description = "MCP gateway exposing search servers over HTTP with OAuth2 auth"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gateway"]
